--- a/screensettings.ui
+++ b/screensettings.ui
@@ -13,50 +13,7 @@
   <property name="windowTitle">
    <string>Form</string>
   </property>
-  <layout class="QVBoxLayout" name="verticalLayout" stretch="0,0,0">
-   <item>
-    <layout class="QVBoxLayout" name="NoSettingsContainer">
-     <property name="topMargin">
-      <number>0</number>
-     </property>
-     <item>
-      <spacer name="NoSettingsVerticalSlider">
-       <property name="orientation">
-        <enum>Qt::Vertical</enum>
-       </property>
-       <property name="sizeHint" stdset="0">
-        <size>
-         <width>20</width>
-         <height>40</height>
-        </size>
-       </property>
-      </spacer>
-     </item>
-     <item>
-      <widget class="QLabel" name="NoSettingsAvailable">
-       <property name="text">
-        <string>No Settings Available for your ereader</string>
-       </property>
-       <property name="alignment">
-        <set>Qt::AlignCenter</set>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <spacer name="verticalSpacer">
-       <property name="orientation">
-        <enum>Qt::Vertical</enum>
-       </property>
-       <property name="sizeHint" stdset="0">
-        <size>
-         <width>20</width>
-         <height>40</height>
-        </size>
-       </property>
-      </spacer>
-     </item>
-    </layout>
-   </item>
+  <layout class="QVBoxLayout" name="verticalLayout" stretch="0,0">
    <item>
     <layout class="QVBoxLayout" name="LuminosityContainer">
      <property name="spacing">
@@ -79,11 +36,18 @@
       </spacer>
      </item>
      <item>
-      <layout class="QHBoxLayout" name="LuminosityLayout" stretch="2,8">
+      <layout class="QHBoxLayout" name="LuminosityLayout" stretch="2,0,8">
        <item>
         <widget class="QLabel" name="LuminosityLabel">
          <property name="text">
           <string>Luminosity : </string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QLabel" name="LuminosityValue">
+         <property name="text">
+          <string>?? </string>
          </property>
         </widget>
        </item>
@@ -145,11 +109,18 @@
       </spacer>
      </item>
      <item>
-      <layout class="QHBoxLayout" name="TintLayout" stretch="0,0">
+      <layout class="QHBoxLayout" name="TintLayout" stretch="0,0,0">
        <item>
         <widget class="QLabel" name="TintLabel">
          <property name="text">
           <string>Tint : </string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QLabel" name="TintValue">
+         <property name="text">
+          <string>?? </string>
          </property>
         </widget>
        </item>
