--- a/screensettings.ui
+++ b/screensettings.ui
@@ -132,6 +132,9 @@
          <property name="singleStep">
           <number>1</number>
          </property>
+         <property name="pageStep">
+          <number>1</number>
+         </property>
          <property name="orientation">
           <enum>Qt::Horizontal</enum>
          </property>
