--- a/screensettings.ui
+++ b/screensettings.ui
@@ -47,7 +47,7 @@
        <item>
         <widget class="QLabel" name="LuminosityValue">
          <property name="text">
-          <string>?? </string>
+          <string>N/A </string>
          </property>
         </widget>
        </item>
@@ -120,7 +120,7 @@
        <item>
         <widget class="QLabel" name="TintValue">
          <property name="text">
-          <string>?? </string>
+          <string>N/A </string>
          </property>
         </widget>
        </item>
