preparing lockscreen stuff, done with HardRefresh stuff

--- a/Resources/Pictures.qrc
+++ b/Resources/Pictures.qrc
@@ -1,5 +1,6 @@
 <RCC>
     <qresource prefix="/pictures">
         <file>pictures/obenkyoQrCode.png</file>
+        <file>pictures/lockscreen.jpg</file>
     </qresource>
 </RCC>
