--- a/appsettings.ui
+++ b/appsettings.ui
@@ -31,6 +31,12 @@
      </item>
      <item>
       <layout class="QHBoxLayout" name="nbrOfEntryLinesSettings">
+       <property name="topMargin">
+        <number>0</number>
+       </property>
+       <property name="bottomMargin">
+        <number>0</number>
+       </property>
        <item>
         <widget class="QLabel" name="nbrOfEntryLinesLabel">
          <property name="text">
@@ -60,9 +66,55 @@
       </layout>
      </item>
      <item>
-      <layout class="QHBoxLayout" name="RandomnessSetting">
+      <layout class="QHBoxLayout" name="HardRefreshSetting">
        <item>
-        <widget class="QLabel" name="label_3">
+        <widget class="QLabel" name="HardRefreshLabel">
+         <property name="text">
+          <string>Hard Refresh Frequency : </string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QComboBox" name="HardRefreshDropdown">
+         <property name="currentIndex">
+          <number>3</number>
+         </property>
+         <item>
+          <property name="text">
+           <string>Never</string>
+          </property>
+         </item>
+         <item>
+          <property name="text">
+           <string>1</string>
+          </property>
+         </item>
+         <item>
+          <property name="text">
+           <string>2</string>
+          </property>
+         </item>
+         <item>
+          <property name="text">
+           <string>5</string>
+          </property>
+         </item>
+         <item>
+          <property name="text">
+           <string>10</string>
+          </property>
+         </item>
+        </widget>
+       </item>
+      </layout>
+     </item>
+     <item>
+      <layout class="QHBoxLayout" name="RandomnessSetting">
+       <property name="topMargin">
+        <number>0</number>
+       </property>
+       <item>
+        <widget class="QLabel" name="RandomnessLabel">
          <property name="text">
           <string>Randomness Type : </string>
          </property>
