--- a/qcmexercice.ui
+++ b/qcmexercice.ui
@@ -121,7 +121,7 @@
             </font>
            </property>
            <property name="text">
-            <string>          </string>
+            <string/>
            </property>
            <property name="scaledContents">
             <bool>false</bool>
