--- a/symbolsettingentry.ui
+++ b/symbolsettingentry.ui
@@ -6,9 +6,15 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>148</width>
-    <height>100</height>
+    <width>400</width>
+    <height>400</height>
    </rect>
+  </property>
+  <property name="minimumSize">
+   <size>
+    <width>1</width>
+    <height>0</height>
+   </size>
   </property>
   <property name="windowTitle">
    <string>Form</string>
@@ -40,7 +46,8 @@
         </sizepolicy>
        </property>
        <property name="text">
-        <string>SymbolSettingEntry</string>
+        <string>あ 
+ a</string>
        </property>
        <property name="checkable">
         <bool>true</bool>
