--- a/symbolsettingentry.ui
+++ b/symbolsettingentry.ui
@@ -13,7 +13,7 @@
   <property name="minimumSize">
    <size>
     <width>1</width>
-    <height>0</height>
+    <height>60</height>
    </size>
   </property>
   <property name="windowTitle">
@@ -46,8 +46,7 @@
         </sizepolicy>
        </property>
        <property name="text">
-        <string>あ 
- a</string>
+        <string/>
        </property>
        <property name="checkable">
         <bool>true</bool>
